<resources>
    <string name="app_name">Zolo_Assignment</string>


    <!--LoginActivity-->
    <string name="hint_phone">Phone number</string>
    <string name="hint_passward">Passward</string>
    <string name="log_in">Log in</string>
    <string name="forget_password">Forget Password</string>
    <string name="create_account">create account</string>

    <!--SignUpActivity-->
    <string name="register">Register</string>
    <string name="please_register">Please Register with zolo to continue</string>
    <string name="hint_email">Your email Id</string>
    <string name="hint_name">Your name</string>

    <!--ProfileActivity-->
    <string name="update">Update</string>


    <!-- ForgetPassward-->
    <string name="forgot">Forgot</string>
    <string name="passward"> Passward? </string>
    <string name="reset_pass">Reset Password</string>


</resources>
