<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
        <variable
            name="vm"
            type="com.suvesh.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginLeft="@dimen/dp_32"
                    android:layout_marginRight="@dimen/dp_32"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        app:srcCompat="@drawable/ic_phone" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp">

                        <com.suvesh.utils.CustomEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:text="@={vm.userPhone}"
                            android:hint="@string/hint_phone"
                            tools:ignore="HardcodedText"/>

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginLeft="@dimen/dp_32"
                    android:layout_marginRight="@dimen/dp_32"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        app:srcCompat="@drawable/ic_key" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp">

                        <com.suvesh.utils.ShowHidePassEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={vm.passward}"
                            android:inputType="textPassword"
                            android:hint="@string/hint_passward" />

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:layout_marginLeft="@dimen/dp_32"
                    android:layout_marginRight="@dimen/dp_32"
                    android:background="@drawable/button_accent"
                    android:text="@string/log_in"
                    android:textSize="@dimen/sp_16"
                    android:onClick="@{(v) -> vm.loginInit()}"
                    android:padding="@dimen/dp_4"
                    android:textColor="@color/black"/>


                <com.suvesh.utils.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="Forget Password?"
                    android:layout_marginTop="@dimen/dp_20"
                    app:font="semibold"
                    android:textSize="@dimen/sp_20"
                    android:gravity="center"/>

               <Button
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="28dp"
                   android:layout_marginLeft="@dimen/dp_32"
                   android:layout_marginRight="@dimen/dp_32"
                   android:textColor="@color/white"
                   android:text="@string/create_account"
                   android:onClick="@{(v) -> vm.onClickCreateAccount()}"
                   android:textAllCaps="true"
                   android:background="@drawable/button_outline_white"/>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>


    </LinearLayout>
</layout>
