<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="vm"
            type="com.suvesh.viewmodel.SignUpViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary"
            android:id="@+id/mParentView">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp_16">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_alignParentLeft="true"
                            app:srcCompat="@drawable/ic_dots"/>

                        <com.suvesh.utils.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="LOG IN"
                            app:textAllCaps="true"
                            android:textColor="@color/white"
                            android:onClick="@{(v) -> vm.onClickLogIn()}"
                            android:textSize="@dimen/sp_16"
                            android:layout_marginRight="@dimen/dp_8"
                            android:layout_alignParentRight="true"
                            android:layout_centerInParent="true"/>



                    </RelativeLayout>

                    <com.suvesh.utils.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:gravity="center"
                        android:text="@string/register"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="40sp"
                        app:font="semibold" />

                    <com.suvesh.utils.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_16"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/please_register"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16"
                        app:font="semibold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_32"
                        android:layout_marginRight="@dimen/dp_32"
                        android:layout_marginTop="@dimen/dp_20"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            app:srcCompat="@drawable/ic_phone" />

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp">

                            <com.suvesh.utils.CustomEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_phone"
                                android:inputType="phone"
                                android:maxLength="10"
                                android:text="@={vm.userPhone}"
                                tools:ignore="HardcodedText" />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_32"
                        android:layout_marginRight="@dimen/dp_32"
                        android:layout_marginTop="@dimen/dp_20"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            app:srcCompat="@drawable/ic_email" />

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp">

                            <com.suvesh.utils.CustomEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_email"
                                android:inputType="textEmailAddress"
                                android:text="@={vm.userEmail}"
                                tools:ignore="HardcodedText" />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_32"
                        android:layout_marginRight="@dimen/dp_32"
                        android:layout_marginTop="@dimen/dp_20"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="25dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            app:srcCompat="@drawable/ic_name" />

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp">

                            <com.suvesh.utils.CustomEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_name"
                                android:text="@={vm.userName}"
                                tools:ignore="HardcodedText" />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_32"
                        android:layout_marginRight="@dimen/dp_32"
                        android:layout_marginTop="@dimen/dp_20"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            app:srcCompat="@drawable/ic_key" />

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp">

                            <com.suvesh.utils.ShowHidePassEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_passward"
                                android:inputType="textPassword"
                                android:text="@={vm.userPassward}" />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_32"
                        android:layout_marginRight="@dimen/dp_32"
                        android:layout_marginTop="28dp"
                        android:background="@drawable/button_accent"
                        android:onClick="@{(v) -> vm.createUser()}"
                        android:padding="@dimen/dp_4"
                        android:text="@string/register"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16" />


                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>
